# ratings

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-postgres-with-volumes  Makefile  README.md  docker-compose.yml  openapi.yaml  pr_number_or_bad_commit.py
.github/workflows/: ci.yml  docker.yaml  dockerhub.yml
client/: package-lock.json  package.json
client/src/components/: AppRoutes.jsx  Main.jsx  Review.jsx  Static.jsx
client/src/styles/: Main.module.css  Review.module.css  Static.module.css  main.css
configs/: config_vars.docker.yaml  config_vars.yaml  config_vars_testing.yaml  static_config.yaml.in
docker/: deploy.md  docker-compose.yaml  postgres-with-schema  service
docker/postgres/: Dockerfile
docker/service/: Dockerfile
postgresql/data/: initial_data.sql  initial_data_reviews.sql  initial_data_signed.sql  initial_data_signed_with_reviews.sql  initial_data_signed_with_unicode_reviews.sql
postgresql/schemas/: db_1.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/lib/: auth.cpp  auth.hpp  validation.cpp  validation.hpp
src/models/: review.cpp  review.hpp
src/v1/delete-review/: view.cpp  view.hpp
src/v1/get-reviews/: view.cpp  view.hpp
src/v1/log-out/: view.cpp  view.hpp
src/v1/login/: view.cpp  view.hpp
src/v1/post-a-review/: view.cpp  view.hpp
src/v1/register/: view.cpp  view.hpp
src/v1/update-review/: view.cpp  view.hpp
tests/: CMakeLists.txt  conftest.py  test_all.py  test_basic.py
unittests/: regex.cpp  validation.cpp
